--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,55 @@
-.App {
-  text-align: center;
+html,
+body,
+#root,
+.app-container,
+.map-container {
+    height: 100%;
+    margin: 0;
+    font-family: 'FreeSerif', sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.place-list-item {
+    color: #FFFFFF;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.title {
+    color: #d6d6d6;
+    text-align: center;
 }
 
-.App-title {
-  font-size: 1.5em;
+.place-list {
+    width: 250px;
+    height: calc(100% - 120px);
+    position: fixed;
+    background: #000000;
+    margin-top: 120px;
 }
 
-.App-intro {
-  font-size: large;
+.heading {
+    position: fixed;
+    width: 250px;
+    background: #000000;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.filter-places {
+    width: 230px;
+    padding: 10px;
+    font-family: inherit;
+    font-size: inherit;
+    border: 0;
+}
+
+.sandwich {
+    position: absolute;
+    z-index: 5;
+    padding: 25px;
+}
+
+.sandwich img {
+    width: 32px;
+}
+
+.map-container,
+.sandwich {
+    transition: 0.3s ease all;
 }
